[LOGIN/LOGOUT] Implementing login logout functionality