@@ -1,10 +1,6 @@
 package springboot.JavaSpringSecurity.service;
 
 import lombok.RequiredArgsConstructor;
-import org.springframework.security.core.GrantedAuthority;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
-import org.springframework.security.core.userdetails.UserDetails;
-import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.stereotype.Service;
 import springboot.JavaSpringSecurity.dto.UserRegistrationDto;
@@ -12,9 +8,7 @@ import springboot.JavaSpringSecurity.entity.Role;
 import springboot.JavaSpringSecurity.entity.User;
 import springboot.JavaSpringSecurity.repository.UserRepository;
 
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.stream.Collectors;
+import java.util.List;
 
 @Service
 @RequiredArgsConstructor
@@ -30,27 +24,13 @@ public class UserServiceImpl implements UserService {
         user.setLastName(registrationDto.getLastName());
         user.setEmail(registrationDto.getEmail());
         user.setPassword(passwordEncoder.encode(registrationDto.getPassword()));
-        user.setRoles(Arrays.asList(new Role("ROLE_USER")));
+        user.setRoles(List.of(new Role("ROLE_USER")));
         return userRepository.save(user);
     }
 
     @Override
-    public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
-        // Fetch user from a database
-        User user = userRepository.findByEmail(username).orElseThrow();
-
-        // Return Spring Security User Object
-        return new org.springframework.security.core.userdetails.User(
-                user.getEmail(),
-                user.getPassword(),
-                mapRolesToAuthorities(user.getRoles())
-        );
-    }
-
-    private Collection<? extends GrantedAuthority> mapRolesToAuthorities(Collection<Role> roles) {
-        return roles.stream().map(
-                role -> new SimpleGrantedAuthority(role.getName())).collect(Collectors.toList()
-        );
+    public List<User> listUsers() {
+        return userRepository.findAll();
     }
 
 }
